# substrate-cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  build-linux.sh  conanfile.py  rpc.json
.githooks/pre-commit-scripts/: git-file-empty-line.sh  git-file-executable-script.sh  git-file-mixed-indent.sh  git-file-whitespace.sh
.github/workflows/: pr-build.yml  release.yml
app/: CMakeLists.txt  main.cpp
conan-profiles/: linux.profile  windows.profile
libSubstrate/: CMakeLists.txt
libSubstrate/include/substrate/: account.h  base58.h  client.h  crypto.h  hex.h  mnemonic.h  rpc_types.h  substrate.h  substrate_export.h  types.h
libSubstrate/public/substrate/: account.h  base58.h  blake2.h  client.h  crypto.h  decoder.h  encoder.h  hash.h  hex.h  rpc_client.h  rpc_types.h  substrate.h  substrate_export.h  types.h  wrap_message.h
libSubstrate/public/substrate/models/: account.h  block.h  charge_type.h  digest.h  era.h  extrinsic.h  hash.h  header.h  keytype.h  method.h  rpc.h  signature.h
libSubstrate/public/substrate/modules/: author.h  chain.h  payment.h  state.h  system.h  unstable_calls.h
libSubstrate/public/substrate/rpc/: author.h  babe.h  beefy.h  chain.h  childstate.h  contracts.h  dev.h  engine.h  eth.h  eth_net.h  eth_web3.h  grandpa.h  mmr.h  offchain.h  payment.h  rpc.h  rpc_author.h  rpc_babe.h  rpc_beefy.h  rpc_chain.h  rpc_childstate.h  rpc_contracts.h  rpc_dev.h  rpc_engine.h  rpc_eth.h  rpc_eth_net.h  rpc_eth_web3.h  rpc_grandpa.h  rpc_mmr.h  rpc_offchain.h  rpc_payment.h  rpc_rpc.h  rpc_state.h  rpc_syncstate.h  rpc_system.h  state.h  syncstate.h  system.h
libSubstrate/src/: bip39.h  bip39_chinese_simplified.cpp  bip39_chinese_traditional.cpp  bip39_czech.cpp  bip39_english.cpp  bip39_french.cpp  bip39_italian.cpp  bip39_japanese.cpp  bip39_portuguese.cpp  bip39_spanish.cpp  logger.h  module.cpp  module.h  module_author.cpp  module_chain.cpp  module_payment.cpp  module_state.cpp  module_system.cpp  module_unstable_calls.cpp  substrate.cpp  substrate_account.cpp  substrate_base58.cpp  substrate_blake2.cpp  substrate_client.cpp  substrate_client.h  substrate_crypto.cpp  substrate_crypto_ed25519.cpp  substrate_crypto_sr25519.cpp  substrate_decoder.cpp  substrate_deps.cpp  substrate_encoder.cpp  substrate_hash.cpp  substrate_hex.cpp  substrate_mnemonic.cpp  substrate_models.cpp  substrate_models.h  substrate_wrap_message.cpp
libSubstrate/src/detail/: json_rpc_client.cpp  json_rpc_client.h  websocket_client.cpp  websocket_client.h
libSubstrate/src/modules/: author.cpp  chain.cpp  payment.cpp  state.cpp  system.cpp  unstable_calls.cpp
libSubstrate/src/rpc/: rpc_author.cpp  rpc_babe.cpp  rpc_beefy.cpp  rpc_chain.cpp  rpc_childstate.cpp  rpc_contracts.cpp  rpc_dev.cpp  rpc_engine.cpp  rpc_eth.cpp  rpc_eth_net.cpp  rpc_eth_web3.cpp  rpc_grandpa.cpp  rpc_mmr.cpp  rpc_offchain.cpp  rpc_payment.cpp  rpc_rpc.cpp  rpc_state.cpp  rpc_syncstate.cpp  rpc_system.cpp  rpc_types.cpp  substrate_client.cpp  substrate_client.h
libSubstrate/src/web/: json_rpc_client.cpp  json_rpc_client.h  websocket_client.cpp  websocket_client.h
scripts/: gen_api.py  get_api.py
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
tests/: crypto_ed25519_test.cpp  crypto_sr25519_test.cpp  models_era_test.cpp  models_extrinsic_test.cpp  models_method_test.cpp  substrate_hash_test.cpp  substrate_mnemonic_test.cpp  substrate_models_test.cpp  test_utils.cpp  test_utils.h
tests/lib/: crypto_address_test.cpp  crypto_ed25519_test.cpp  crypto_sr25519_test.cpp  models_era_test.cpp  models_extrinsic_test.cpp  models_method_test.cpp  substrate_account_test.cpp  substrate_base58_test.cpp  substrate_hash_test.cpp  substrate_mnemonic_test.cpp  substrate_wrap_message_test.cpp
tests/node/: rpc_author_test.cpp  rpc_chain_test.cpp  rpc_payment_test.cpp  rpc_state_test.cpp  rpc_system_test.cpp  rpc_test.cpp  rpc_test.h
